--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "your-bot-token",
+    "token": "Nzk5MzU5NzMzMjE1MDAyNjM0.YACbww.y4ldrHVMWdHziPLVsZrkrmX3nsk",
     "prefix": "au!"
 }
